--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,10 @@ body {
 
 .top-banner {
   color: var(--text_light);
+
 }
+
+
  
 .heading {
   font-weight: bold;
@@ -64,11 +67,7 @@ body {
   padding: 0 0 30px 0;
 }
  
-.top-banner form {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
+
  
 .top-banner form input {
   font-size: 2rem;
@@ -165,3 +164,8 @@ li {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+#sendbutton {}
+
+/*autocomplete styling */
+
